--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <!--HTML file anticipated to be the front end of the Rock-Paper-Scissors game.-->
+<!DOCTYPE HTML>
+<head?>
+    <link type="text/css" rel="stylesheet" href="reset.css">
+    <link type="text/css" rel="stylesheet" href="style.css">
+</head>
+<body>
+
+</body>
